sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: ';' expected but 'while' found.
      } while (i + ecart < n )
        ^AlgCombSort:16: error: 'while' expected but '}' found.
  } while (ecart>1 or m) 
  ^